--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 600px;
+    width: 100vw;
+    max-width: 900px;
     align-items: center;
     background-color: white;
     padding-bottom: 40px;
@@ -31,6 +33,7 @@ body {
 
 #invitation_image {
     max-height: 151vh;
+    width: 100%;
 }
 
 a {
