--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 600px;
-    width: 100vw;
-    max-width: 900px;
+    max-width: 100vw;
     align-items: center;
     background-color: white;
     padding-bottom: 40px;
