--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     justify-content: center;
     display: flex;
-    background-image: url('images/bg1.jpg');
+    background-image: url('images/bg.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
